<?xml version="1.0"?>
<package>
  <name>joy_teleop</name>
  <version>0.0.1</version>
  <description>A (to be) generic joystick interface to control a robot</description>

  <maintainer email="paul.mathieu@pal-robotics.com">Paul Mathieu</maintainer>
  <author email="paul.mathieu@pal-robotics.com">Paul Mathieu</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>actionlib</build_depend>
  <build_depend>play_motion</build_depend>
  <build_depend>rospy</build_depend>

  <build_depend>boost</build_depend>

  <run_depend>actionlib</run_depend>
  <run_depend>play_motion</run_depend>
  <run_depend>rospy</run_depend>

</package>
