<?xml version="1.0"?>
<package format="3">
  <name>joy_teleop</name>
  <version>0.3.0</version>
  <description>A (to be) generic joystick interface to control a robot</description>

  <maintainer email="bence.magyar.robotics@gmail.com">Bence Magyar</maintainer>
  <author email="paul.mathieu@pal-robotics.com">Paul Mathieu</author>

  <license>BSD</license>

  <!-- <run_depend>actionlib</run_depend> -->
  <!-- <run_depend>rostopic</run_depend> -->

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>teleop_tools_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>

</package>
