<?xml version="1.0"?>
<package>
  <name>mouse_teleop</name>
  <version>0.3.0</version>
  <description>A mouse teleop tool for holonomic mobile robots.</description>

  <maintainer email="enrique.fernandez.perdomo@gmail.com">Enrique Fernandez</maintainer>
  <author email="enrique.fernandez.perdomo@gmail.com">Enrique Fernandez</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>rospy</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>python-numpy</run_depend>
</package>
