<?xml version="1.0"?>
<package format="3">
  <name>mouse_teleop</name>
  <version>0.3.0</version>
  <description>A mouse teleop tool for holonomic mobile robots.</description>

  <maintainer email="enrique.fernandez.perdomo@gmail.com">Enrique Fernandez</maintainer>
  <author email="enrique.fernandez.perdomo@gmail.com">Enrique Fernandez</author>

  <license>BSD</license>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>python-numpy</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>

</package>
