<?xml version="1.0"?>
<package>
  <name>teleop_tools</name>
  <version>0.1.1</version>
  <description>A set of generic teleoperation tools for any robot.</description>
  <maintainer email="bence.magyar@pal-robotics.com">Bence Magyar</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>joy_teleop</run_depend>
  <run_depend>key_teleop</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
