<?xml version="1.0"?>
<package>
  <name>teleop_tools</name>
  <version>0.3.0</version>
  <description>A set of generic teleoperation tools for any robot.</description>
  <maintainer email="bence.magyar.robotics@gmail.com">Bence Magyar</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>joy_teleop</run_depend>
  <run_depend>key_teleop</run_depend>
  <run_depend>teleop_tools_msgs</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
