<?xml version="1.0"?>
<package format="3">
  <name>teleop_tools</name>
  <version>0.4.0</version>
  <description>A set of generic teleoperation tools for any robot.</description>
  <maintainer email="bence.magyar.robotics@gmail.com">Bence Magyar</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>joy_teleop</exec_depend>
  <exec_depend>key_teleop</exec_depend>
  <exec_depend>mouse_teleop</exec_depend>
  <exec_depend>teleop_tools_msgs</exec_depend>

  <export>
    <metapackage/>
  </export>
</package>
