<?xml version="1.0"?>
<package format="3">
  <name>teleop_tools_msgs</name>
  <version>0.4.0</version>
  <description>The teleop_tools_msgs package</description>
  <maintainer email="bence.magyar.robotics@gmail.com">Bence Magyar</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>actionlib_msgs</exec_depend>
  <exec_depend>control_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
</package>
